# nfl-playoff-rankings-mc-sim

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-entrypoint.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: docker-publish.yml
.kiro/specs/adaptive-solver-timing/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.kiro/specs/bootstrap-frontend/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cp-solver-playoff-clinching/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.kiro/specs/docker-containerization/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/monte-carlo-playoff-simulator/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/nfl-schedule-grid/: .config.kiro  design.md  requirements.md  tasks.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  charts.js  schedule-grid.js  schedule.js  simulation.js  standings.js  statistics.js
frontend/tests/: conference-headers.test.js  division-leader.test.js  error-alert.test.js  form-classes.test.js  game-result-colors.test.js  label-input.test.js  logo-sizing.test.js  navigation.test.js  schedule-grid.test.js  setup.js  setup.test.js  table-classes.test.js
src/: __init__.py  __main__.py  cache.py  clinching.py  cp_solver.py  data_client.py  elimination.py  nfl_teams.py  server.py  simulator.py  standings.py  team_strength.py
tests/: __init__.py  conftest.py  test_adaptive_estimation.py  test_cp_clinch_endpoint.py  test_cp_solver.py  test_parallel_simulation.py  test_schedule_grid.py  test_server_timing.py  test_solver_timing.py  test_standings.py  test_strategies_smoke.py  test_team_strength.py  test_tiebreakers.py
tests/strategies/: __init__.py  espn_json.py  games.py  standings.py
