[project]
name = "nfl-monte-carlo-simulator"
version = "0.3.0"
description = "Monte Carlo NFL Playoff Simulator"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.130.5",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
